--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ header {
   padding: 30px;
   text-align: center;
   font-size: 1.4em;
-  background-color: #8B1F41;
+  background-color: #2F65CC;
   color: white;
 }
 
@@ -58,7 +58,7 @@ footer {
   padding: 30px;
   text-align: center;
   font-size: 1.4em;
-  background-color: #8B1F41;
+  background-color: #2F65CC;
   color: white;
 }
 
