changing colors, work in progress

--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ main {
 }
 
 nav {
-  background-color: #D64D0F;
+  background-color: #D2AD63;
   padding: 20px;
 
 }
@@ -47,7 +47,7 @@ nav li {
 
 aside {
   padding: 20px;
-  background-color: #418016;
+  background-color: #FF9C1F;
   color: white;
 }
 
