--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,18 @@ h5 {
   font-weight: bold;
 }
 
+h6 {
+  margin-bottom: 1em;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+h7 {
+  margin-bottom: 1em;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
 p {
   margin-bottom: 1em;
 }
